# fasta-rs

./: CHANGELOG.md  Cargo.toml  README.md
resources/: test.index  test_short_descr.fasta
src/: errors.rs  helpers.rs  index.rs  lib.rs  map.rs  pieces.rs  read.rs
