[package]
name = "fasta"
version = "0.1.0"
authors = ["Nick Machnik <nick.machnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgzip = "0.0.3"
hashbrown = { version = "0.7", features = ["serde", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"